Time: 14 ms (51.58%), Space: 43.2 MB (92.20%) - LeetHub