@@ -11,10 +11,11 @@ public class Codec {
     public StringBuilder postorder(TreeNode root, StringBuilder sb) {
         if (root == null)
             return sb;
-        postorder(root.left, sb);
-        postorder(root.right, sb);
         sb.append(root.val);
         sb.append(' ');
+        postorder(root.left, sb);
+        postorder(root.right, sb);
+
         return sb;
     }
 
@@ -26,17 +27,18 @@ public class Codec {
         return sb.toString();
     }
 
-    public TreeNode helper(Integer lower, Integer upper, ArrayDeque<Integer> nums) {
+    public TreeNode helper(Integer lower, Integer upper, ArrayList<Integer> nums) {
         if (nums.isEmpty())
             return null;
-        int val = nums.getLast();
+        int val = nums.get(0);
         if (val < lower || val > upper)
             return null;
 
-        nums.removeLast();
+        nums.remove(0);
         TreeNode root = new TreeNode(val);
-        root.right = helper(val, upper, nums);
         root.left = helper(lower, val, nums);
+        root.right = helper(val, upper, nums);
+       
         return root;
     }
 
@@ -44,7 +46,7 @@ public class Codec {
     public TreeNode deserialize(String data) {
         if (data.isEmpty())
             return null;
-        ArrayDeque<Integer> nums = new ArrayDeque<Integer>();
+        ArrayList<Integer> nums = new ArrayList<Integer>();
         for (String s : data.split("\\s+"))
             nums.add(Integer.valueOf(s));
         return helper(Integer.MIN_VALUE, Integer.MAX_VALUE, nums);
